# Bassline

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
c_audio/: CMakeLists.txt  Makefile  README.md  index.html  package.json  post-js.js
c_audio/WASM/: CMakeLists.txt  Makefile  audio.cpp  audio.hpp  audio_utils.hpp  audio_utils_test.cpp  oscillator.hpp  pre-js.js  wav.hpp
c_audio/src/: Utilities.ts  audio-engine-worklet.ts  audio.cpp  audio_utils.hpp  audio_utils_test.cpp  kick-synth.ts  main_test.ts  oscillator.cpp  oscillator.hpp  oscillator_test.cpp  parameter.hpp  wavetables.hpp  wavetables_test.cpp
src/: 2DButton.tsx  App.tsx  BackgroundDiv.tsx  Presets.ts  Utilities.ts  main.tsx
src/audio/: AudioMain.ts  AudioMixer.ts  DrumSequencer.ts  Instruments.ts  RecorderNode.ts  audio-engine-worklet.ts  kick-synth-WASM.js  kick-synth.ts  midi_utility.ts  wasm-audio-helper.ts
src/components/: 2DButton.tsx  BackgroundDiv.tsx  Colors.ts  InlineComboBox.tsx  InstructionOverlay.tsx  Knob.tsx  LowerSettingsPane.tsx  Sequencer.tsx  SettingsMenu.tsx  ToggleSlider.tsx  UpperSettingsPane.tsx  Visualizer.tsx
